--- a/index.html
+++ b/index.html
@@ -21,19 +21,23 @@
     </div>
 </nav>
 <main>
-    <section>
-    <form>
-        <h1>Please sign in</h1>
-        <div class="form-floating">
-            <input type="email" class="form-control"placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control"  placeholder="Password">
-            <label for="floatingPassword">Password</label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
-    </form>
+    <section style="width: 60rem; margin: auto;">
+    <div class="card text-center nes-container">
+          <div class="title">Please sign in</div>
+          <div class="card-body">
+            <form>
+                <div class="form-floating">
+                    <input type="email" class="form-control nes-balloon"placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+                <div class="form-floating">
+                    <input type="password" class="form-control nes-balloon"  placeholder="Password">
+                    <label for="floatingPassword">Password</label>
+                </div>
+                <button class="w-50 btn btn-lg nes-btn" type="submit">Sign in</button>
+            </form>
+      </div>
+    </div>
     </section>
 </main>
 </body>
