ahora si...terminado xd

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 </nav>
 <main>
-    <section style="width: 60rem; margin: auto;">
+    <section class="container-fluid container-lg mt-2" style="width: 60rem; margin: auto;">
     <div class="card text-center nes-container">
           <div class="title">Please sign in</div>
           <div class="card-body">
